# notionSnapshot

./: .gitignore  .prettierrc.js  Dockerfile  README  README.md  development diary.md  development notes.md  docker-compose.yml  docker.sh  index.html  log.txt  makefile  pyproject.toml  remove-db-padding.sh  requirements.in  requirements.txt  test.sh
.github/: FUNDING.yml
docs/: CONTRIBUTING.md  TODO.md  development diary.md  feature ideas.md  index.html  progress.md  supported blocks.md  tmp.md  tutorialCli.html  tutorialGui.html
documentation/: development diary.md  index.html
notionsnapshot/: __main__.py  argparser.py  depmanager.py  driver.py  logger.py
notionsnapshot/injections/: injection.css  injection.js
